# TerraHacks

./: .env  .gitignore  README.md  package-lock.json
backend/: Dockerfile  README.md  best_blood_estimation_model.pt  best_risk_score_model.pt  config.py  manage.py  pyproject.toml
backend/app/: __init__.py  app.py  database.py  models.py  simplify_watch_data.py  views.py
backend/data/: actual_blood_values.json  apple_watch_30day_raw_data.json  csv_to_json.py  database_schema.json  grouped_watch_data.json  ibrahim.json  manage_health_data.py  raw_series_data.json  risk_score_training_data.json  sample_physical_data.json  simplify_watch_data.py  training_data.json
backend/data/backup/: actual_blood_values.json  apple_watch_7day_raw_data.json  mongo_example.json
backend/data/other/: evaluation_data.json
backend/simulation/: dataset.py  eval.py  generate_test_data.py  generate_training_data.py  neural_net.py  normalization.py  training.py
backend/simulation/neural_network/: blood_estimation.py  neural_net.py  risk_score.py
backend/src/: app.py  database.py  gemini.py  guesstimate_blood_values.py
data/: grouped_watch_data.json
frontend/: App.js  myData.js  package-lock.json  package.json  reports.js
simulation/: .gitignore  pyproject.toml
simulation/app/: eval.py  generate_test_data.py
simulation/risk_index/: eval.py  generate_test_data.py  grouped_watch_data.json  health_score_model.pt  training.py
terrahacks/: App.js  package-lock.json  package.json
